[project]
name = "wheel-of-fortune-3-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=5.0.0",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
wof = "app.main:main"
